[gd_scene load_steps=5 format=3 uid="uid://v2eb5kxog0eq"]

[ext_resource type="Script" uid="uid://bn5qm301cnlaq" path="res://script/layout.gd" id="1_0aoxk"]
[ext_resource type="PackedScene" uid="uid://csxmep2uiwr1" path="res://scene/colonne_boutique.tscn" id="1_gtb00"]
[ext_resource type="PackedScene" uid="uid://bxgijcb6xhknj" path="res://scene/colonne_main.tscn" id="2_gvdl5"]
[ext_resource type="PackedScene" uid="uid://dagvvcvu546n8" path="res://scene/colonne_stats.tscn" id="3_68w0p"]

[node name="layout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0aoxk")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
metadata/_edit_use_anchors_ = true

[node name="header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 420

[node name="Button" type="Button" parent="VBoxContainer/header"]
layout_mode = 2
text = "param√®tres"

[node name="nomDuJeu" type="Label" parent="VBoxContainer/header"]
layout_mode = 2
text = "Get Back my words"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="colonneBoutique" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_gtb00")]
unique_name_in_owner = true
layout_mode = 2

[node name="colonneMain" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_gvdl5")]
unique_name_in_owner = true
layout_mode = 2

[node name="colonneStats" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_68w0p")]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="liste" from="VBoxContainer/HBoxContainer/colonneBoutique" to="." method="_on_colonne_boutique_liste"]
[connection signal="prixMinus" from="VBoxContainer/HBoxContainer/colonneBoutique" to="." method="_on_colonne_boutique_prix_minus"]
[connection signal="isPress" from="VBoxContainer/HBoxContainer/colonneMain" to="." method="_on_colonne_main_is_press"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
